fixed spacing in QuickView sections

--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/QuickView/QuickView.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/QuickView/QuickView.less
@@ -10,9 +10,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    svg {
+      margin-right: 8px;
+    }
     .Published {
       color: @zesty-green;
       font-weight: bold;
+      font-size: 16px;
     }
     .Unpublished {
       color: @zesty-light-grey;
@@ -35,9 +40,12 @@
     strong {
       font-weight: bold;
     }
+
     ul li {
-      list-style-position: inside;
       list-style-type: circle;
+    }
+    li {
+      padding: 10px 0;
     }
     .linkGroup {
       padding: 1rem 0;
