--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/Content.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/Content.less
@@ -7,6 +7,8 @@
   .MainEditor {
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
+
     .Editor {
       width: 60vw;
       padding: 0;
@@ -21,5 +23,19 @@
       padding-right: 16px;
       background: #f2f7fc;
     }
+  }
+}
+
+// Content widget shared styles
+.SharedCardStyles {
+  svg {
+    margin-right: 8px;
+  }
+
+  ul li {
+    list-style-type: circle;
+  }
+  li {
+    padding: 10px 0 0 5px;
   }
 }
